--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -12,6 +12,7 @@
     "vite": "^5.3.4"
   },
   "dependencies": {
-    "@splidejs/splide": "^4.1.4"
+    "@splidejs/splide": "^4.1.4",
+    "firebase": "^10.12.5"
   }
 }
